--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,4 @@
 
 // Styles pages
 @import "../pages/clients/HomePage/Home.styles.scss";
+@import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss"
