get courses from api, create coursesReducer blabla...

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,4 +14,11 @@
 
 // Styles pages
 @import "../pages/clients/HomePage/Home.styles.scss";
-@import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss"
+@import "../pages/clients/HomePage/SearchCourses/SearchCourses.scss";
+@import "../pages/clients/HomePage/HeroSection/HeroSection.scss";
+@import "../pages/clients/HomePage/Courses/CoursesItem/CoursesItem.scss";
+
+
+
+
+@import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss";
