--- a/src/pages/clients/HomePage/SearchCourses/SearchCourses.scss
+++ b/src/pages/clients/HomePage/SearchCourses/SearchCourses.scss
@@ -1,15 +1,3 @@
 .search-section{
-    transform: translateY(225px);
-    .search-warp{
-        padding: 0;
-        background-color: transparent;
-        .course-search-form{
-            background-color: #d82a4e;
-            .site-btn{
-                background-color: white;
-                color: #d82a4e;
-            }
-        }
-    }
-    
+    // transform: translateY(290px);
 }
