--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,9 @@
 @import "../pages/clients/HomePage/SearchCourses/SearchCourses.scss";
 @import "../pages/clients/HomePage/HeroSection/HeroSection.scss";
 @import "../pages/clients/HomePage/Courses/CoursesItem/CoursesItem.scss";
+@import "../pages/clients/HomePage/CoursesCatelories/CoursesCatelories.scss";
+@import "../pages/clients/HomePage/AboutUs/AboutUs.scss";
+
 
 
 
