--- a/src/pages/clients/HomePage/SearchCourses/SearchCourses.scss
+++ b/src/pages/clients/HomePage/SearchCourses/SearchCourses.scss
@@ -1,3 +1,11 @@
-.search-section{
-    // transform: translateY(290px);
+.site-btn.mySelect{
+    background-color: #ffffff;
+    color: black;
+    width: 100%;
 }
+.course-search-form{
+    width: 80%;
+    margin: auto;
+    transform: translateX(-4%)
+}
+
