--- a/src/pages/clients/HomePage/SearchCourses/SearchCourses.scss
+++ b/src/pages/clients/HomePage/SearchCourses/SearchCourses.scss
@@ -3,7 +3,7 @@
     color: black;
     width: 100%;
 }
-.course-search-form{
+.my-course-search-form{
     width: 80%;
     margin: auto;
     transform: translateX(-4%)
