--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,8 @@
 @import "../pages/clients/HomePage/Courses/CoursesItem/CoursesItem.scss";
 @import "../pages/clients/HomePage/CoursesCatelories/CoursesCatelories.scss";
 @import "../pages/clients/HomePage/AboutUs/AboutUs.scss";
+@import "../pages/clients/UserPage/UserPage.scss";
+@import "../pages/clients/UserPage/MyCourses/MyCourses.scss";
 
 
 
