--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,4 +34,4 @@
 @import "../pages/clients/UserPage/UserPage.scss";
 @import "../pages/clients/UserPage/MyCourses/MyCourses.scss";
 
-@import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss";
+// @import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss";
