--- a/src/pages/clients/UserPage/MyCourses/MyCourses.scss
+++ b/src/pages/clients/UserPage/MyCourses/MyCourses.scss
@@ -1,10 +1,46 @@
 .slick-arrow.slick-prev, .slick-arrow.slick-next{
     width: 50px;
 }
+
+.my_active{
+    color: #d82a4e;
+}
+
 .my_courses{
     .title{
+        padding: 30px 0;
+        display: block;
+        text-align: center;
         h6{
             display: inline;
+            font-size: 27px;
+            transition: .2s;
+            cursor: pointer;
+            &:hover{
+                color: #d82a4e;
+            }
         }
+    }
+    .courses{
+        height: 600px;
+        .img{
+            position: relative;
+            display: flex;
+            justify-items: center;
+            align-items: flex-start;
+            width: 100%;
+            height: 100%;
+            img{
+                margin: 0 auto;
+                width: 90%;
+                height: 90%;
+            }
+            p{
+                position: absolute;
+                top: 42%;
+                left: 50%;
+                font-size: 18px;
+            }
+        }        
     }
 }
