--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,5 +33,6 @@
 @import "../pages/clients/HomePage/AboutUs/AboutUs.scss";
 @import "../pages/clients/UserPage/UserPage.scss";
 @import "../pages/clients/UserPage/MyCourses/MyCourses.scss";
+@import "../pages/clients/UserPage/Form/Form.scss";
 
 // @import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss";
