new admin users page

--- a/src/components/left-sidebar/left-sidebar.styles.scss
+++ b/src/components/left-sidebar/left-sidebar.styles.scss
@@ -124,3 +124,12 @@
     }
   }
 }
+.link.left-sidebar-active{
+  i {
+    background: #17c2d7 ;
+    color: #fff;
+  }
+  span {
+    color: #17c2d7;
+  }
+}
