--- a/src/components/main-content/main-content.styles.scss
+++ b/src/components/main-content/main-content.styles.scss
@@ -27,7 +27,7 @@
             display: flex;
             list-style: none;
             .link{
-                color:#007bff;
+                color: $color-primary;
                 &:hover{
                     opacity: 0.6;
                 }
