--- a/src/components/top-navbar/top-navbar.styles.scss
+++ b/src/components/top-navbar/top-navbar.styles.scss
@@ -13,7 +13,7 @@
   padding: 0;
   margin: 0 15px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-
+ float: right;
   .navbar-menu {
     width: 100%;
     display: flex;
@@ -27,6 +27,7 @@ ul.navbar-nav {
   vertical-align: middle;
   flex-direction: column;
   padding-left: 0;
+ 
   .dropdown {
     display: inline-block;
     vertical-align: middle;
