--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,5 +34,6 @@
 @import "../pages/clients/UserPage/UserPage.scss";
 @import "../pages/clients/UserPage/MyCourses/MyCourses.scss";
 @import "../pages/clients/UserPage/Form/Form.scss";
+@import "../pages/clients/CoursesDetail/CoursesDetail.scss"
 
 // @import "../pages/clients/SignupSigninPage/SignupSignin.styles.scss";
