--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -3,3 +3,112 @@
     cursor: pointer !important;
   }
 }
+
+  a{
+    font-size: 19px !important;
+  }
+  .active{
+    color: #d82a4e !important;
+  }
+
+.user_tag {
+  display: flex;
+  padding-top: 8px;
+  .avata {
+    cursor: pointer;
+    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    border-radius: 50%;
+    transition: 0.2s;
+    img {
+      width: 40px;
+    }
+    &:hover {
+      border: 1px rgba(255, 255, 255, 0.836) solid;
+      background-color: rgba(255, 255, 255, 0.267);
+    }
+  }
+
+  .avata.bell {
+    cursor: pointer;
+    border: unset;
+    background-color: unset;
+    padding: 9.5px;
+    i {
+      font-size: 28px;
+      color: rgba(255, 255, 255, 0.733) !important;
+    }
+    &:hover {
+      border: 1px rgba(255, 255, 255, 0.836) solid;
+      background-color: rgba(255, 255, 255, 0.267);    }
+  }
+
+  .user_avata {
+    position: relative;
+    .arrow {
+      width: 40px;
+      height: 50px;
+      transition: 0.5s !important;
+      opacity: 0;
+      position: absolute !important;
+      left: 0;
+      top: 2px;
+      cursor: pointer;
+      display: inline-block;
+      height: 40px;
+      position: relative;
+      line-height: 2.5em;
+      padding-left: 0em;
+      padding-right: 1em;
+      background: rgba(255, 255, 255, 0.363);
+      color: white;
+      &:after {
+        // triangle hover color
+        transition: 0s !important;
+        border-left: 20px solid rgba(255, 255, 255, 0.363);
+        ;
+      }
+      i{
+        font-size: 21px;
+        color: white;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+      &:hover i{
+        animation: upDown 1s 0s infinite alternate;
+        @keyframes upDown {
+          0%{
+            transform: translate(-50%, -50%);
+          }
+          25%{
+            transform: translate(-50%, -70%);
+          }
+          75%{
+            transform: translate(-50%, -30%);
+          }
+          100%{
+            transform: translate(-50%, -50%);
+          }
+        }
+      }
+    }
+    .arrow:after {
+      content: "";
+      position: absolute;
+      border-bottom: 20px solid transparent;
+      border-top: 20px solid transparent;
+      height: 0px;
+      width: 0px;
+      margin-right: -20px;
+      right: 0;
+    }
+    &:hover .arrow{
+      opacity: 1;
+      left: 46px;
+    }
+  }
+}
