--- a/src/pages/clients/HomePage/Courses/CoursesItem/CoursesItem.scss
+++ b/src/pages/clients/HomePage/Courses/CoursesItem/CoursesItem.scss
@@ -3,3 +3,18 @@
     padding: 2px;
     margin: auto;
 }
+.to_detail{
+    padding: 5px !important;
+    transition: .1s;
+    &:hover{
+        background-color: #8f001d;
+    }
+}
+.course-item{
+    cursor: pointer;
+    box-shadow: -1px 2px 15px -4px rgba(0,0,0,.75);
+    transition: .3s;
+    &:hover{
+        box-shadow: none;
+    }
+}
