--- a/src/pages/clients/UserPage/UserPage.scss
+++ b/src/pages/clients/UserPage/UserPage.scss
@@ -2,7 +2,7 @@
   margin: 100px 0;
   .my_infor {
     background-color: #d82a4e;
-    padding: 30px 0;
+    padding: 30px 10px;
     display: block;
     text-align: center;
     h6 {
