--- a/src/components/main-content-user/main-content.styles.scss
+++ b/src/components/main-content-user/main-content.styles.scss
@@ -12,7 +12,7 @@
   min-width: 0;
   word-wrap: break-word;
   background-color: #282b2f !important;
-  height: 500px;
+  height: 67vh;
 
   .nav {
     display: flex;
