--- a/src/components/left-sidebar/left-sidebar.styles.scss
+++ b/src/components/left-sidebar/left-sidebar.styles.scss
@@ -6,6 +6,7 @@
   left: 0px;
   z-index: 9;
   margin-top: 0px;
+  font-size: 13px;
   .navbar-brand {
     display: block;
     // vertical-align: middle;
